# libvorbis

./: Android.mk  CMakeLists.txt
examples/: chaining_example.c  seeking_example.c
lib/: block.c  codebook.c  codebook.h  floor0.c  floor1.c  info.c  mdct.h  os.h  res0.c  sharedbook.c
lib/modes/: residue_44p51.h
macos/compat/sys/: types.h
vq/: localcodebook.h
