set(VORBIS_SOURCES
    libogg/src/bitwise.c
    libogg/src/framing.c
    lib/mdct.c
    lib/smallft.c
    lib/block.c
    lib/envelope.c
    lib/window.c
    lib/lsp.c
    lib/lpc.c
    lib/analysis.c
    lib/synthesis.c
    lib/psy.c
    lib/info.c
    lib/floor1.c
    lib/floor0.c
    lib/res0.c
    lib/mapping0.c
    lib/registry.c
    lib/codebook.c
    lib/sharedbook.c
    lib/lookup.c
    lib/bitrate.c
    lib/envelope.h
    lib/lpc.h
    lib/lsp.h
    lib/codebook.h
    lib/misc.h
    lib/psy.h
    lib/masking.h
    lib/os.h
    lib/mdct.h
    lib/smallft.h
    lib/highlevel.h
    lib/registry.h
    lib/scales.h
    lib/window.h
    lib/lookup.h
    lib/lookup_data.h
    lib/codec_internal.h
    lib/backends.h
    lib/bitrate.h
    lib/vorbisfile.c
    lib/vorbisenc.c)

include_directories(.)
include_directories(include)
include_directories(include/vorbis)
include_directories(lib)
include_directories(lib/books/floor)
include_directories(lib/books/coupled)
include_directories(lib/books/uncoupled)
include_directories(libogg/include)

add_library(vorbis ${VORBIS_SOURCES})